--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,30 @@
-certifi==2019.9.11
-chardet==3.0.4
+asgiref==3.5.2
+beautifulsoup4==4.9.3
+certifi==2022.6.15
+cloudinary==1.29.0
+config==0.5.0.post0
+confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
-Django==2.2.6
-django-crispy-forms==1.7.2
+Django==3.2
+django-bootstrap4==2.3.1
+django-braces==1.14.0
+django-crispy-forms==1.9.2
 django-heroku==0.3.1
-djangorestframework==3.10.3
-gunicorn==19.9.0
-idna==2.8
-Pillow==6.2.0
-psycopg2==2.8.3
-python-dateutil==2.8.0
-python-decouple==3.1
-python-dotenv==0.10.3
-pytz==2019.3
-pyuploadcare==2.6.0
-requests==2.22.0
-six==1.12.0
-sqlparse==0.3.0
-urllib3==1.25.6
-whitenoise==4.1.4
+django-model-utils==4.0.0
+django-registration==3.3
+django-star-ratings==0.9.1
+django-tinymce==3.1.0
+djangorestframework==3.12.1
+gunicorn==20.0.4
+importlib-metadata==2.0.0
+Pillow==8.0.1
+psycopg2==2.8.6
+python-decouple==3.3
+pytz==2020.1
+six==1.15.0
+soupsieve==2.0.1
+sqlparse==0.4.1
+swapper==1.1.2.post1
+urllib3==1.26.9
+whitenoise==5.2.0
+zipp==3.3.2
